Reverted the default style for all HTML elements in the documentation (to solve the problem with shifted bullet points) + Added missing files for internal_arch source file.
git-svn-id: file:///Users/ckoch/repos/assembla.com/boo@3318 e0e46c49-be69-4f5a-ad62-21024a331aea

Former-commit-id: 1a02f73a87083987d20351f81e9c096143ccc0e4

--- a/doc/site/css/style.css
+++ b/doc/site/css/style.css
@@ -298,11 +298,6 @@ rect:hover {
 /************************************\
 Setup
 \************************************/
-* {
-  -webkit-box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
 
 body {
   font-family: 'Open Sans', sans-serif;
